<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:validateform="http://schemas.android.com/apk/res/com.dataware.medsurveillance"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true"
  android:background="#ffffff">
  <LinearLayout 
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:id="@+id/LoginRootView"
  		android:orientation="vertical"
  		android:background="#ffffff">
  		
  		<!-- GOBI-FFF services Form -->
		<LinearLayout
		  	 android:layout_width="fill_parent"
		     android:layout_height="wrap_content"
		     android:background="#ffffff"
		     android:orientation="vertical"
		     android:padding="5dip">
	
		  <com.dataware.medsurveillance.includes.RobotoTextView
		        app:typeface="roboto_condensed"
		        android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="#bb6008"
		        android:textSize="17dip"
		  		android:text="Growth Monitored"/>
		  
		  <Spinner
		        android:id="@+id/growth_monitored"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dip"
		  		android:layout_marginBottom="20dip"
		        android:entries="@array/growth_monitored"
		        android:prompt="@string/growth_monitored_prompt" />

		  <com.dataware.medsurveillance.includes.RobotoTextView
		        app:typeface="roboto_condensed"
		        android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="#bb6008"
		        android:textSize="17dip"
		  		android:text="Oral Hydration"/>
		  
		  <ToggleButton
		      android:id="@+id/oral_hydration"
		      android:layout_width="fill_parent"
		      android:layout_height="wrap_content"
		      android:textOff="No"
		      android:textOn="Yes" />
		  
		  <com.dataware.medsurveillance.includes.RobotoTextView
		        app:typeface="roboto_condensed"
		        android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="#bb6008"
		        android:textSize="17dip"
		  		android:text="Method of Feeding"/>
		  
		  <Spinner
		        android:id="@+id/method_of_feeding"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dip"
		  		android:layout_marginBottom="20dip"
		        android:entries="@array/method_offeeding"
		        android:prompt="@string/method_offeeding_prompt" />
		  
		  <com.dataware.medsurveillance.includes.RobotoTextView
		        app:typeface="roboto_condensed"
		        android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="#bb6008"
		        android:textSize="17dip"
		  		android:text="Immunised"/>
		  
		  <Spinner
		        android:id="@+id/immunised"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dip"
		  		android:layout_marginBottom="20dip"
		        android:entries="@array/immunised"
		        android:prompt="@string/immunised_prompt" />
		  		
		  <com.dataware.medsurveillance.includes.RobotoTextView
		        app:typeface="roboto_condensed"
		        android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="#bb6008"
		        android:textSize="17dip"
		  		android:text="Female Education"/>
		  
		  <Spinner
		        android:id="@+id/female_educ"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dip"
		  		android:layout_marginBottom="20dip"
		        android:entries="@array/female_educ"
		        android:prompt="@string/female_educ_prompt" />
		  		
		  <com.dataware.medsurveillance.includes.RobotoTextView
		        app:typeface="roboto_condensed"
		        android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="#bb6008"
		        android:textSize="17dip"
		  		android:text="Food Suppliments"/>
		  
		  <ToggleButton
		      android:id="@+id/food_suppliments"
		      android:layout_width="fill_parent"
		      android:layout_height="wrap_content"
		      android:textOff="No"
		      android:textOn="Yes" />
		  
		  <!--  Error message -->
          <com.dataware.medsurveillance.includes.RobotoTextView
		        app:typeface="roboto_condensed"
		        android:id="@+id/demo_error"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#e30000"
                android:padding="10dip"
                android:textStyle="bold"/>
          
		  <!-- Save button -->	
		  <RelativeLayout		  	
			  	android:layout_width="fill_parent"
			 	android:layout_height="wrap_content"
			  	android:padding="10dip"
			  	android:layout_gravity="center_horizontal">
			  		  
				  <Button android:text="Save" 
				      android:id="@+id/btnsave" 
				      android:layout_marginTop="10dip"
				      
				      android:layout_height="wrap_content"
				      android:layout_width="150dip"
				      android:background="@drawable/buttonyellow" 
				      android:layout_alignParentRight="true"		     
				      style="@style/Buttondual">		     
				  </Button>	  
				  
				  <Button android:text="Rest" 
				      android:id="@+id/btnreset" 
				      android:layout_alignParentLeft="true"
				      android:layout_marginTop="10dip"
				      android:layout_height="wrap_content"
				      android:layout_width="150dip"
				      android:background="@drawable/buttonred" 
				      style="@style/Buttondual">		     
				  </Button>
			  
			</RelativeLayout>
	
		
		    
		</LinearLayout>
	
  		
  </LinearLayout>
</ScrollView>
